--- a/.github/workflows/xunit-pipeline.yml
+++ b/.github/workflows/xunit-pipeline.yml
@@ -18,21 +18,21 @@ on:
 
 env:
   PROJECT_NAME: Saucery
-  SOLN_FILE: Saucery.sln                                                                        # full path to your solution file
+  SOLN_FILE: Saucery.sln
   XUNIT_INT_DIR: Merlin.XUnit
   XUNIT_RD_INT_DIR: Merlin.XUnit.RealDevices
   XUNIT_INT_TEST_RESULTS_DIR: Merlin.XUnit/bin/Release/net9.0/TestResults
   XUNIT_RD_INT_TEST_RESULTS_DIR: Merlin.XUnit.RealDevices/bin/Release/net9.0/TestResults
   COVERLET_DIR: ./TestResults
-  UT_PROJECT: Saucery.Core.Tests/Saucery.Core.Tests.csproj                                      # full path to your unit test project file
+  UT_PROJECT: Saucery.Core.Tests/Saucery.Core.Tests.csproj
   TT_PROJECT: Template.Tests/Template.Tests.csproj
-  M_XUNIT_PROJECT: Merlin.XUnit/Merlin.XUnit.csproj                                             # full path to xunit internal integration test project file
-  M_RD_XUNIT_PROJECT: Merlin.XUnit.RealDevices/Merlin.XUnit.RealDevices.csproj                  # full path to xunit internal integration test project file
+  M_XUNIT_PROJECT: Merlin.XUnit/Merlin.XUnit.csproj
+  M_RD_XUNIT_PROJECT: Merlin.XUnit.RealDevices/Merlin.XUnit.RealDevices.csproj
   SAUCE_USER_NAME: ${{ secrets.SAUCE_USER_NAME }}
   SAUCE_API_KEY: ${{ secrets.SAUCE_API_KEY }}
   CODACY_PROJECT_TOKEN: ${{ secrets.CODACY_PROJECT_TOKEN }}
   CONFIG: Release
-  APP_PACKAGE_PATH: 'published'                                                                 # set this to the path to your web app project, defaults to the repository root
+  APP_PACKAGE_PATH: 'published'
   COVERAGE_FORMAT: cobertura
   UNIT_COVERAGE_FILENAME: cobertura.unit.xml
   XUNIT_INTEGRATION_COVERAGE_FILENAME: cobertura.xunit.integration.xml
@@ -45,7 +45,6 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
     - name: Checkout Code
       uses: actions/checkout@v5
@@ -53,7 +52,6 @@ jobs:
     - name: Setup dotnet
       uses: actions/setup-dotnet@v5
       with:
-        # Check for latest at link at .NET 9 download page (https://dotnet.microsoft.com/download/dotnet/9.0)
         dotnet-version: 9.0.x
 
     - name: Compile solution
@@ -61,13 +59,13 @@ jobs:
 
     - name: Run TUnit Unit tests (with coverage + TRX)
       run: |
-       dotnet run -c ${{ env.CONFIG }} --project ${{ env.UT_PROJECT }} -- \
-       --report-trx \
-       --report-trx-filename "unit.trx" \
-       --coverage \
-       --coverage-output "${{ github.workspace }}/${{ env.COVERLET_DIR }}/${{ env.UNIT_COVERAGE_FILENAME }}" \
-       --coverage-output-format "${{ env.COVERAGE_FORMAT }}" \
-       --results-directory "TestResults"
+        dotnet run -c ${{ env.CONFIG }} --project ${{ env.UT_PROJECT }} -- \
+        --report-trx \
+        --report-trx-filename "unit.trx" \
+        --coverage \
+        --coverage-output "${{ github.workspace }}/${{ env.COVERLET_DIR }}/${{ env.UNIT_COVERAGE_FILENAME }}" \
+        --coverage-output-format "${{ env.COVERAGE_FORMAT }}" \
+        --results-directory "TestResults"
 
     - name: Run Template Tests
       run: dotnet test -c ${{ env.CONFIG }} --filter "Group=XUnit" ${{ env.TT_PROJECT }}
@@ -85,7 +83,7 @@ jobs:
       uses: actions/upload-artifact@v5
       with:
         name: unit-test-results
-        path: ${{ env.COVERLET_DIR }}/${{env.UNIT_COVERAGE_FILENAME}}
+        path: ${{ env.COVERLET_DIR }}/${{ env.UNIT_COVERAGE_FILENAME }}
 
   xunit-integration-tests:
     runs-on: ubuntu-latest
@@ -97,7 +95,6 @@ jobs:
     - name: Setup dotnet
       uses: actions/setup-dotnet@v5
       with:
-        # Check for latest at link at .NET 9 download page (https://dotnet.microsoft.com/download/dotnet/9.0)
         dotnet-version: 9.0.x
 
     - name: Restore dependencies
@@ -114,7 +111,7 @@ jobs:
         outputFormat: ${{ env.COVERAGE_FORMAT }}
         #threshold: ${{ env.COVERAGE_THRESHOLD }}
         excludes: '[Merlin.XUnit]Tests.*'
-     
+
     - name: Display structure of downloaded files
       run: ls -R
 
@@ -122,7 +119,7 @@ jobs:
       uses: actions/upload-artifact@v5
       with:
         name: xunit-integration-test-results
-        path: ${{ env.COVERLET_DIR }}//${{env.XUNIT_INTEGRATION_COVERAGE_FILENAME}}
+        path: ${{ env.COVERLET_DIR }}/${{ env.XUNIT_INTEGRATION_COVERAGE_FILENAME }}
 
   xunit-real-integration-tests:
     runs-on: ubuntu-latest
@@ -134,9 +131,8 @@ jobs:
     - name: Setup dotnet
       uses: actions/setup-dotnet@v5
       with:
-        # Check for latest at link at .NET 9 download page (https://dotnet.microsoft.com/download/dotnet/9.0)
         dotnet-version: 9.0.x
-    
+
     - name: Restore dependencies
       run: dotnet restore --force
 
@@ -150,18 +146,120 @@ jobs:
         output: ${{ env.XUNIT_RD_INTEGRATION_COVERAGE_FILENAME }}
         outputFormat: ${{ env.COVERAGE_FORMAT }}
         #threshold: ${{ env.COVERAGE_THRESHOLD }}
-        excludes: '[Merlin.XUnit.RealDevice]Tests.*'
-       
+        excludes: '[Merlin.XUnit.RealDevices]Tests.*'
+
     - name: Publish Artifacts
       uses: actions/upload-artifact@v5
       with:
         name: xunit-real-integration-test-results
-        path: ${{ env.COVERLET_DIR }}/${{env.XUNIT_RD_INTEGRATION_COVERAGE_FILENAME}}
+        path: ${{ env.COVERLET_DIR }}/${{ env.XUNIT_RD_INTEGRATION_COVERAGE_FILENAME }}
+
+  # NEW STAGE: Publish Saucery.XUnit to NuGet if local version is newer than nuget.org
+  publish-saucery-xunit:
+    runs-on: ubuntu-latest
+    needs: [xunit-integration-tests, xunit-real-integration-tests]
+    # Restrict to master to avoid accidental publishes; remove this "if" to allow other branches
+    if: github.ref == 'refs/heads/master'
+    env:
+      PROJECT_PATH: Saucery.XUnit/Saucery.XUnit.csproj
+      PACKAGE_ID: Saucery.XUnit
+      BUILD_CONFIGURATION: Release
+      ARTIFACT_DIR: artifacts
+    steps:
+    - name: Checkout Code
+      uses: actions/checkout@v5
+
+    - name: Setup dotnet
+      uses: actions/setup-dotnet@v5
+      with:
+        dotnet-version: 9.0.x
+
+    - name: Ensure jq is available
+      run: |
+        if ! command -v jq >/dev/null 2>&1; then
+          sudo apt-get update
+          sudo apt-get install -y jq
+        fi
+
+    - name: Build & Pack Saucery.XUnit
+      run: |
+        dotnet restore "$PROJECT_PATH"
+        dotnet build "$PROJECT_PATH" -c "$BUILD_CONFIGURATION" --no-restore
+        mkdir -p "$ARTIFACT_DIR"
+        dotnet pack "$PROJECT_PATH" -c "$BUILD_CONFIGURATION" -o "$ARTIFACT_DIR" --no-build
+
+    - name: Determine local packed version
+      id: localver
+      shell: bash
+      run: |
+        set -euo pipefail
+        NUPKG="$(ls "$ARTIFACT_DIR"/${PACKAGE_ID}.*.nupkg | grep -v '\.symbols\.nupkg' | head -n1)"
+        if [[ -z "${NUPKG:-}" ]]; then
+          echo "No nupkg found for ${PACKAGE_ID} in ${ARTIFACT_DIR}" >&2
+          exit 1
+        fi
+        BASENAME="$(basename "$NUPKG")"
+        LOCAL_VERSION="${BASENAME#${PACKAGE_ID}.}"
+        LOCAL_VERSION="${LOCAL_VERSION%.nupkg}"
+        echo "nupkg=$NUPKG"           >> "$GITHUB_OUTPUT"
+        echo "version=$LOCAL_VERSION"  >> "$GITHUB_OUTPUT"
+        echo "Local version: $LOCAL_VERSION"
+
+    - name: Query NuGet for latest published version
+      id: remotever
+      shell: bash
+      run: |
+        set -euo pipefail
+        LOWER_ID="$(echo "$PACKAGE_ID" | tr '[:upper:]' '[:lower:]')"
+        INDEX_URL="https://api.nuget.org/v3-flatcontainer/${LOWER_ID}/index.json"
+        if ! curl -fsSL "$INDEX_URL" -o /tmp/nuget_index.json; then
+          echo "version=" >> "$GITHUB_OUTPUT"
+          echo "Package not found on NuGet (first publish)."
+          exit 0
+        fi
+        REMOTE_VERSION="$(jq -r '.versions | last // empty' /tmp/nuget_index.json)"
+        echo "version=$REMOTE_VERSION" >> "$GITHUB_OUTPUT"
+        echo "Remote version: ${REMOTE_VERSION:-<none>}"
+
+    - name: Decide if publish is needed
+      id: decide
+      shell: bash
+      run: |
+        set -euo pipefail
+        LOCAL="${{ steps.localver.outputs.version }}"
+        REMOTE="${{ steps.remotever.outputs.version }}"
+        if [[ -z "$REMOTE" ]]; then
+          echo "publish=true" >> "$GITHUB_OUTPUT"
+          echo "No remote version; will publish."
+          exit 0
+        fi
+        HIGHEST="$(printf '%s\n' "$REMOTE" "$LOCAL" | sort -V | tail -n1)"
+        if [[ "$HIGHEST" == "$LOCAL" && "$LOCAL" != "$REMOTE" ]]; then
+          echo "publish=true" >> "$GITHUB_OUTPUT"
+          echo "Local ($LOCAL) > Remote ($REMOTE); will publish."
+        else
+          echo "publish=false" >> "$GITHUB_OUTPUT"
+          echo "Local ($LOCAL) is NOT greater than Remote ($REMOTE); skipping publish."
+        fi
+
+    - name: Publish to NuGet (only if newer)
+      if: steps.decide.outputs.publish == 'true'
+      env:
+        NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
+      run: |
+        set -euo pipefail
+        if [[ -z "${NUGET_API_KEY:-}" ]]; then
+          echo "NUGET_API_KEY secret is missing." >&2
+          exit 1
+        fi
+        dotnet nuget push "${{ steps.localver.outputs.nupkg }}" \
+          --api-key "$NUGET_API_KEY" \
+          --source https://api.nuget.org/v3/index.json \
+          --skip-duplicate
 
   generate-report:
     runs-on: ubuntu-latest
-    needs: [xunit-integration-tests,
-            xunit-real-integration-tests]
+    needs: [publish-saucery-xunit]
     steps:
     - name: Checkout Code
       uses: actions/checkout@v5
@@ -176,31 +274,23 @@ jobs:
       with:
         name: xunit-integration-test-results
 
-    - name: Download tunit-real-integration-test results
+    - name: Download xunit-real-integration-test results
       uses: actions/download-artifact@v6
       with:
         name: xunit-real-integration-test-results
 
-    # - name: Present working directory
-    #   run: pwd
-
-    # - name: Display structure of downloaded files
-    #   run: ls -R
-
     - name: ReportGenerator
       uses: danielpalme/ReportGenerator-GitHub-Action@5.4.18
       with:
-        # REQUIRED # The coverage reports that should be parsed (separated by semicolon). Globbing is supported.
-        reports: ${{env.UNIT_COVERAGE_FILENAME}};{{env.XUNIT_INTEGRATION_COVERAGE_FILENAME}};{{env.XUNIT_RD_INTEGRATION_COVERAGE_FILENAME}}
-        targetdir: 'coveragereport' # REQUIRED # The directory where the generated report should be saved.
-        reporttypes: 'HtmlInline;Cobertura' # The output formats and scope (separated by semicolon) Values: Badges, Clover, Cobertura, CsvSummary, Html, HtmlChart, HtmlInline, HtmlInline_AzurePipelines, HtmlInline_AzurePipelines_Dark, HtmlSummary, JsonSummary, Latex, LatexSummary, lcov, MarkdownSummary, MHtml, PngChart, SonarQube, TeamCitySummary, TextSummary, Xml, XmlSummary
+        reports: ${{ env.UNIT_COVERAGE_FILENAME }};${{ env.XUNIT_INTEGRATION_COVERAGE_FILENAME }};${{ env.XUNIT_RD_INTEGRATION_COVERAGE_FILENAME }}
+        targetdir: 'coveragereport'
+        reporttypes: 'HtmlInline;Cobertura'
 
     - name: Upload coverage report artifact
       uses: actions/upload-artifact@v5
       with:
-        name: CoverageReport # Artifact name        
-        path: coveragereport # Directory containing files to upload
-      # Use always() to always run this step to publish test results when there are test failures
+        name: CoverageReport
+        path: coveragereport
       if: ${{ always() }}
 
     - name: Bump version and push tag
