--- a/.github/workflows/nunit-pipeline.yml
+++ b/.github/workflows/nunit-pipeline.yml
@@ -135,7 +135,7 @@ jobs:
     - name: Compile solution
       run: dotnet build -c ${{ env.CONFIG }}
 
-    - name: Run NUnit Integration Tests
+    - name: Run NUnit Real Integration Tests
       uses: b3b00/coverlet-action@1.3.5-alpha2
       with:
         testProject: ${{ env.M_RD_NUNIT_PROJECT }}
