--- a/.github/workflows/xunit3-pipeline.yml
+++ b/.github/workflows/xunit3-pipeline.yml
@@ -26,8 +26,8 @@ env:
   COVERLET_DIR: ./TestResults
   UT_PROJECT: Saucery.Core.Tests/Saucery.Core.Tests.csproj                                      # full path to your unit test project file
   TT_PROJECT: Template.Tests/Template.Tests.csproj
-  M_XUNIT3_PROJECT: Merlin.XUnit3/Merlin.XUnit3.csproj                                             # full path to xunit internal integration test project file
-  M_RD_XUNIT3_PROJECT: Merlin.XUnit3.RealDevices/Merlin.XUnit3.RealDevices.csproj                  # full path to xunit internal integration test project file
+  M_XUNIT3_PROJECT: Merlin.XUnit3/Merlin.XUnit3.csproj                                          # full path to xunit internal integration test project file
+  M_RD_XUNIT3_PROJECT: Merlin.XUnit3.RealDevices/Merlin.XUnit3.RealDevices.csproj               # full path to xunit internal integration test project file
   SAUCE_USER_NAME: ${{ secrets.SAUCE_USER_NAME }}
   SAUCE_API_KEY: ${{ secrets.SAUCE_API_KEY }}
   CODACY_PROJECT_TOKEN: ${{ secrets.CODACY_PROJECT_TOKEN }}
@@ -146,10 +146,112 @@ jobs:
         name: xunit3-real-integration-test-results
         path: ${{ env.XUNIT3_RD_INT_TEST_RESULTS_DIR }}/${{env.XUNIT3_RD_INTEGRATION_COVERAGE_FILENAME}}
 
+  # NEW STAGE: Publish Saucery.XUnit.v3 to NuGet if local version is newer than nuget.org
+  publish-saucery-xunit3:
+    runs-on: ubuntu-latest
+    needs: [xunit3-integration-tests, xunit3-real-integration-tests]
+    # Restrict to master to avoid accidental publishes; remove this "if" to allow other branches
+    if: github.ref == 'refs/heads/master'
+    env:
+      PROJECT_PATH: Saucery.XUnit3/Saucery.XUnit.v3.csproj     # adjust if your csproj name/path differs
+      PACKAGE_ID: Saucery.XUnit.v3
+      BUILD_CONFIGURATION: Release
+      ARTIFACT_DIR: artifacts
+    steps:
+    - name: Checkout Code
+      uses: actions/checkout@v5
+
+    - name: Setup dotnet
+      uses: actions/setup-dotnet@v5
+      with:
+        dotnet-version: 9.0.x
+
+    - name: Ensure jq is available
+      run: |
+        if ! command -v jq >/dev/null 2>&1; then
+          sudo apt-get update
+          sudo apt-get install -y jq
+        fi
+
+    - name: Build & Pack Saucery.XUnit.v3
+      run: |
+        dotnet restore "$PROJECT_PATH"
+        dotnet build "$PROJECT_PATH" -c "$BUILD_CONFIGURATION" --no-restore
+        mkdir -p "$ARTIFACT_DIR"
+        dotnet pack "$PROJECT_PATH" -c "$BUILD_CONFIGURATION" -o "$ARTIFACT_DIR" --no-build
+
+    - name: Determine local packed version
+      id: localver
+      shell: bash
+      run: |
+        set -euo pipefail
+        NUPKG="$(ls "$ARTIFACT_DIR"/${PACKAGE_ID}.*.nupkg | grep -v '\.symbols\.nupkg' | head -n1)"
+        if [[ -z "${NUPKG:-}" ]]; then
+          echo "No nupkg found for ${PACKAGE_ID} in ${ARTIFACT_DIR}" >&2
+          exit 1
+        fi
+        BASENAME="$(basename "$NUPKG")"
+        LOCAL_VERSION="${BASENAME#${PACKAGE_ID}.}"
+        LOCAL_VERSION="${LOCAL_VERSION%.nupkg}"
+        echo "nupkg=$NUPKG"           >> "$GITHUB_OUTPUT"
+        echo "version=$LOCAL_VERSION"  >> "$GITHUB_OUTPUT"
+        echo "Local version: $LOCAL_VERSION"
+
+    - name: Query NuGet for latest published version
+      id: remotever
+      shell: bash
+      run: |
+        set -euo pipefail
+        LOWER_ID="$(echo "$PACKAGE_ID" | tr '[:upper:]' '[:lower:]')"
+        INDEX_URL="https://api.nuget.org/v3-flatcontainer/${LOWER_ID}/index.json"
+        if ! curl -fsSL "$INDEX_URL" -o /tmp/nuget_index.json; then
+          echo "version=" >> "$GITHUB_OUTPUT"
+          echo "Package not found on NuGet (first publish)."
+          exit 0
+        fi
+        REMOTE_VERSION="$(jq -r '.versions | last // empty' /tmp/nuget_index.json)"
+        echo "version=$REMOTE_VERSION" >> "$GITHUB_OUTPUT"
+        echo "Remote version: ${REMOTE_VERSION:-<none>}"
+
+    - name: Decide if publish is needed
+      id: decide
+      shell: bash
+      run: |
+        set -euo pipefail
+        LOCAL="${{ steps.localver.outputs.version }}"
+        REMOTE="${{ steps.remotever.outputs.version }}"
+        if [[ -z "$REMOTE" ]]; then
+          echo "publish=true" >> "$GITHUB_OUTPUT"
+          echo "No remote version; will publish."
+          exit 0
+        fi
+        HIGHEST="$(printf '%s\n' "$REMOTE" "$LOCAL" | sort -V | tail -n1)"
+        if [[ "$HIGHEST" == "$LOCAL" && "$LOCAL" != "$REMOTE" ]]; then
+          echo "publish=true" >> "$GITHUB_OUTPUT"
+          echo "Local ($LOCAL) > Remote ($REMOTE); will publish."
+        else
+          echo "publish=false" >> "$GITHUB_OUTPUT"
+          echo "Local ($LOCAL) is NOT greater than Remote ($REMOTE); skipping publish."
+        fi
+
+    - name: Publish to NuGet (only if newer)
+      if: steps.decide.outputs.publish == 'true'
+      env:
+        NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
+      run: |
+        set -euo pipefail
+        if [[ -z "${NUGET_API_KEY:-}" ]]; then
+          echo "NUGET_API_KEY secret is missing." >&2
+          exit 1
+        fi
+        dotnet nuget push "${{ steps.localver.outputs.nupkg }}" \
+          --api-key "$NUGET_API_KEY" \
+          --source https://api.nuget.org/v3/index.json \
+          --skip-duplicate
+
   generate-report:
     runs-on: ubuntu-latest
-    needs: [xunit3-integration-tests,
-            xunit3-real-integration-tests]
+    needs: [publish-saucery-xunit3]
     steps:
     - name: Checkout Code
       uses: actions/checkout@v5
@@ -179,9 +281,9 @@ jobs:
       uses: danielpalme/ReportGenerator-GitHub-Action@5.4.18
       with:
         # REQUIRED # The coverage reports that should be parsed (separated by semicolon). Globbing is supported.
-        reports: ${{env.UNIT_COVERAGE_FILENAME}};{{env.XUNIT3_INTEGRATION_COVERAGE_FILENAME}};{{env.XUNIT3_RD_INTEGRATION_COVERAGE_FILENAME}}
+        reports: ${{ env.UNIT_COVERAGE_FILENAME }};${{ env.XUNIT3_INTEGRATION_COVERAGE_FILENAME }};${{ env.XUNIT3_RD_INTEGRATION_COVERAGE_FILENAME }}
         targetdir: 'coveragereport' # REQUIRED # The directory where the generated report should be saved.
-        reporttypes: 'HtmlInline;Cobertura' # The output formats and scope (separated by semicolon) Values: Badges, Clover, Cobertura, CsvSummary, Html, HtmlChart, HtmlInline, HtmlInline_AzurePipelines, HtmlInline_AzurePipelines_Dark, HtmlSummary, JsonSummary, Latex, LatexSummary, lcov, MarkdownSummary, MHtml, PngChart, SonarQube, TeamCitySummary, TextSummary, Xml, XmlSummary
+        reporttypes: 'HtmlInline;Cobertura' # The output formats and scope (separated by semicolon)
 
     - name: Upload coverage report artifact
       uses: actions/upload-artifact@v5
