--- a/.github/workflows/sync-and-commit-pipeline.yml
+++ b/.github/workflows/sync-and-commit-pipeline.yml
@@ -2,9 +2,9 @@ name: Sync & Commit
 
 on:
   workflow_dispatch: {}
-  # schedule:
+  schedule:
     # Runs at 00:00, 06:00, 12:00, 18:00 UTC daily (4× per day)
-  #  - cron: "0 0,6,12,18 * * *"
+    - cron: "0 0,6,12,18 * * *"
 
 permissions:
   contents: write  # required for pushing to master
