--- a/ExternalMerlin.NUnit/ExternalMerlin.NUnit.csproj
+++ b/ExternalMerlin.NUnit/ExternalMerlin.NUnit.csproj
@@ -13,6 +13,7 @@
   <ItemGroup> 
     <PackageReference Include="NUnit3TestAdapter" Version="6.0.1" />
     <PackageReference Include="Saucery" Version="4.10.3" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.1" />
   </ItemGroup>
 
 </Project>
