--- a/.github/workflows/xunit3-pipeline-external.yml
+++ b/.github/workflows/xunit3-pipeline-external.yml
@@ -45,129 +45,45 @@ jobs:
     outputs:
       changed: ${{ steps.decide.outputs.changed }}
       previous_sha: ${{ steps.decide.outputs.previous_sha }}
-      paths_changed: ${{ steps.decide.outputs.paths_changed }}
+      paths_changed: $global.variables['CI_COMMIT_LIST'] != ''
+
     steps:
-      - name: Resolve last completed run head_sha for this workflow+branch AND check paths
+      - name: Check out code
+        uses: actions/checkout@v2
+
+      - name: Get the list of changed files
+        id: changed-files
+        run: |
+          echo "Fetching commit history..."
+          git fetch --prune --unshallow || true
+          echo "Changed files:"
+          echo "##[group]Changed files"
+          git diff --name-only ${{ github.event.before }} ${{ github.sha }} || true
+          echo "##[endgroup]"
+          echo "Changed files since last successful run:"
+          git diff --name-only ${{ github.event.before }}...${{ github.sha }} || true
+
+      - name: Set output values
         id: decide
-        uses: actions/github-script@v7
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            const { owner, repo } = context.repo;
-            const branch = context.ref.replace('refs/heads/', '');  // e.g. "master"
-            const workflow_id = ".github/workflows/xunit3-pipeline-external.yml";
+        run: |
+          echo "GITHUB_HEAD_REF=${GITHUB_HEAD_REF}"
+          echo "GITHUB_BASE_REF=${GITHUB_BASE_REF}"
+          echo "GITHUB_EVENT_PATH=${GITHUB_EVENT_PATH}"
+          echo "GITHUB_WORKSPACE=${GITHUB_WORKSPACE}"
+          echo "GITHUB_REPOSITORY=${GITHUB_REPOSITORY}"
+          echo "GITHUB_REF=${GITHUB_REF}"
+          echo "GITHUB_SHA=${GITHUB_SHA}"
+          echo "GITHUB_EVENT_NAME=${GITHUB_EVENT_NAME}"
+          echo "CI_COMMIT_LIST<<EOF" >> $GITHUB_ENV
+          git diff --name-only ${{ github.event.before }} ${{ github.sha }} >> $GITHUB_ENV
+          echo "EOF" >> $GITHUB_ENV
 
-            const runs = await github.rest.actions.listWorkflowRuns({
-              owner,
-              repo,
-              workflow_id,
-              branch,
-              status: "completed",
-              per_page: 1
-            });
-
-            const prevSha = runs.data.workflow_runs[0]?.head_sha || "";
-            const curSha = context.sha;
-
-            core.info(`Current SHA:  ${curSha}`);
-            core.info(`Previous SHA: ${prevSha || "<none>"}`);
-
-            let changed = "true";
-            let pathsChanged = "true";
-
-            // Get watched globs from env (comma-separated)
-            const raw = process.env.WATCHED_GLOBS || "";
-            const watchedGlobs = raw
-              .split(",")
-              .map(x => x.trim())
-              .filter(x => x.length > 0);
-
-            core.info(`WATCHED_GLOBS (parsed): [${watchedGlobs.join(", ")}]`);
-
-            // Very small glob matcher supporting '*' and '**'
-            function globToRegexSource(pattern) {
-              let out = "";
-              for (let i = 0; i < pattern.length; i++) {
-                const ch = pattern[i];
-                if (ch === "*") {
-                  const nextIsStar = i + 1 < pattern.length && pattern[i + 1] === "*";
-                  if (nextIsStar) {
-                    out += ".*";  // '**' => any depth
-                    i++;          // skip second '*'
-                  } else {
-                    out += "[^/]*"; // '*' => any chars except '/'
-                  }
-                } else if (ch === "/") {
-                  out += "\\/"; // literal slash
-                } else if ("\\.[]{}()+-?^$|".includes(ch)) {
-                  out += "\\" + ch; // escape regex special
-                } else {
-                  out += ch;
-                }
-              }
-              return out;
-            }
-
-            function matchesGlob(path, pattern) {
-              const source = globToRegexSource(pattern);
-              const regex = new RegExp("^" + source + "$");
-              return regex.test(path);
-            }
-
-            if (!prevSha) {
-              // First time this workflow has completed on this branch
-              core.info("No previous completed run for this workflow+branch. Treating as changed.");
-              if (watchedGlobs.length === 0) {
-                core.info("No watched globs defined; treating paths_changed as true.");
-                pathsChanged = "true";
-              } else {
-                core.info("First run: skipping path-based filtering and treating paths_changed as true.");
-                pathsChanged = "true";
-              }
-            } else if (prevSha === curSha) {
-              core.info("No new commits since the last completed run on this branch.");
-              changed = "false";
-              pathsChanged = "false";
-            } else {
-              // There are new commits; now see if watched paths changed.
-              const comparison = await github.rest.repos.compareCommits({
-                owner,
-                repo,
-                base: prevSha,
-                head: curSha
-              });
-
-              const files = comparison.data.files || [];
-              const changedPaths = files.map(f => f.filename);
-
-              core.info("Changed files since last run:");
-              if (changedPaths.length === 0) {
-                core.info(" (none reported by compareCommits)");
-              } else {
-                for (const p of changedPaths) core.info(` - ${p}`);
-              }
-
-              if (watchedGlobs.length === 0) {
-                core.info("No watched globs defined; treating paths_changed as true.");
-                pathsChanged = "true";
-              } else {
-                const matches = changedPaths.some(path =>
-                  watchedGlobs.some(pattern => matchesGlob(path, pattern))
-                );
-
-                pathsChanged = matches ? "true" : "false";
-
-                if (pathsChanged === "true") {
-                  core.info("Detected changes in watched paths. Downstream jobs are eligible to run.");
-                } else {
-                  core.info("No changes in watched paths. Downstream jobs will be skipped.");
-                }
-              }
-            }
-
-            core.setOutput("changed", changed);
-            core.setOutput("paths_changed", pathsChanged);
-            core.setOutput("previous_sha", prevSha);
+      - name: Output debug information
+        run: |
+          echo "changed: ${{ steps.decide.outputs.changed }}"
+          echo "previous_sha: ${{ steps.decide.outputs.previous_sha }}"
+          echo "paths_changed: ${{ steps.decide.outputs.paths_changed }}"
+          echo "CI_COMMIT_LIST=${CI_COMMIT_LIST}"
 
   xunit3-external-tests:
     needs: detect-changes
@@ -187,7 +103,7 @@ jobs:
       run: dotnet build -c ${{ env.CONFIG }}
 
     - name: Run External XUnit3 Integration Tests
-      run: dotnet test -c ${{ env.CONFIG }} ${{ env.EM_XUNIT3_PROJECT }} --no-build
+      run: dotnet test -c ${{ env.CONFIG }} --project ${{ env.EM_XUNIT3_PROJECT }} --no-build
 
   xunit3-real-external-tests:
     needs: detect-changes
@@ -207,7 +123,7 @@ jobs:
       run: dotnet build -c ${{ env.CONFIG }}
 
     - name: Run External XUnit3 Real Integration Tests
-      run: dotnet test -c ${{ env.CONFIG }} ${{ env.EM_RD_XUNIT3_PROJECT }} --no-build
+      run: dotnet test -c ${{ env.CONFIG }} --project ${{ env.EM_RD_XUNIT3_PROJECT }} --no-build
 
   tag:
     needs: [detect-changes, xunit3-external-tests, xunit3-real-external-tests]
